[project]
name = "ComfyUI-geltz"
description = "Image processing, LoRA metadata, samplers, schedulers, guidance, latents."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/geltz/comfyui-geltz"

[tool.comfy]
PublisherId = "geltz"
DisplayName = "ComfyUI-geltz"
Icon = ""
