[project]
name = "comfyui-geltz"
description = "Image processing, LoRA metadata, schedulers, guidance, latents."
version = "1.0.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/geltz/comfyui-geltz"

[tool.comfy]
PublisherId = "geltz"
DisplayName = "comfyui-geltz"
Icon = ""
